z-index fix

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none;
-  z-index: -99;
+  z-index: -100;
 }
 
 .flying-butterfly--2 {
@@ -63,7 +63,7 @@ body {
   left: 25%;
   transform: translate(-50%, -50%);
   pointer-events: none;
-  z-index: -98;
+  z-index: -100;
 }
 
 .flying-butterfly--3 {
@@ -74,7 +74,7 @@ body {
   left: 75%;
   transform: translate(-50%, -50%) scaleX(-1);
   pointer-events: none;
-  z-index: -97;
+  z-index: -100;
 }
 
 .flowers {
